# tv-tea

./: .gitignore  Procfile  README.md  pyproject.toml
backend/: authorization.py  middleware.py  models.py  serializers.py  settings.py  urls.py  views.py
backend/migrations/: 0001_initial.py  0002_alter_userwatchlist_unique_together_and_more.py
backend/templates/: index.html
tv-tracker/: .eslintrc  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
tv-tracker/public/: index.html
tv-tracker/src/: App.css  App.tsx  constants.ts  index.css  main.tsx  utils.ts
tv-tracker/src/components/: FAQ.tsx  Header.tsx  Search.tsx  Season.tsx  ShowListItem.tsx  ShowPage.tsx  UserContext.tsx  WatchListPage.tsx
tv-tracker/src/components/Profile/: Profile.tsx
tv-tracker/src/components/Search/: Search.tsx  ShowListItem.tsx
tv-tracker/src/components/Stats/: StatsPage.tsx
tv-tracker/src/components/TVShow/: Season.tsx  ShowPage.tsx
tv-tracker/src/components/WatchList/: AddSeasonModal.tsx  SeasonTile.tsx  UpNext.tsx  WatchList.tsx  WatchListPage.tsx
tv-tracker/src/components/common/: Loading.tsx  ProgressBar.tsx  ProviderImage.tsx
tv-tracker/src/contexts/: UserContext.tsx
tv-tracker/src/types/: index.ts
